[package]
name = "http-app"
version = "0.1.3"
edition = "2021"
description = "Wrapper around hyper to help with making a http server"
repository = "https://github.com/Developed-Methods/http-app"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["net", "rt"] }
hyper = "1.5.0"
hyper-util = { version = "0.1.9", features = ["full"] }
tracing = "0.1.40"
bytes = "1.8.0"
http-body-util = "0.1.2"
prometheus = "0.13.0"
tls-friend = { version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }

[features]
default = []
tls = ["tls-friend"]
