[package]
name = "http-app"
version = "0.2.0"
edition = "2021"
description = "Wrapper around hyper to help with making a http server"
repository = "https://github.com/Developed-Methods/http-app"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt"] }
hyper = "1.5"
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
bytes = "1.8"
http-body-util = "0.1"
arc-metrics = "0.1"
tls-friend = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["metrics-server"]
tls = ["tls-friend"]
metrics-server = []
